test/Fail/TerminationAndUnivalence.err
TerminationAndUnivalence.agda:31.1-32.41: error: [TerminationIssue]
Termination checking failed for the following function:
  noo
Problematic call:
  noo FOne iso x
    (at TerminationAndUnivalence.agda:32.27-30)
